Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14479

lgss_sk may load keys with incorrect permissions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Lustre 2.15.0
    • 3
    • 9223372036854775807

      In autotest, we are used to running the following command after SSK keys have been loaded into the keyring via lgss_sk -l:

      # keyctl show | grep lustre | cut -c1-11 | sed -e 's/ //g;' | xargs -IX keyctl setperm X 0x3f3f3f3f
      

      We might look into options so that lgss_sk correctly sets the permissions by itself.

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: